--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
             rel="stylesheet">
+        <!-- Bootstrap Icons CSS -->
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- links to css stylesheet -->
         <link rel="stylesheet" href="./css/main.min.css">
         <link rel="stylesheet" href="./css/style.css">
@@ -69,6 +73,13 @@
                             <a href="#booking" type="button"
                                 class="btn btn-info btn-lg px-4 me-md-2 text-white fs-4">Book an
                                 Appointment</a>
+                        </div>
+                        <div class="pt-4">
+                            <span>
+                                <i class="bi bi-telephone"></i> <span class="phone-link">&nbsp; +1 (613) 555-1234 &nbsp; &nbsp;&nbsp;&nbsp;</span> <i
+                                    class="bi bi-envelope"></i> &nbsp;<a class="email-link"
+                                    href="mailto:dental@ottawaClinic.ca">dental@ottawaClinic.ca</a>
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -356,8 +367,8 @@
                         <p class="text-center">Monday - Friday: 9:00 AM - 5:00 PM</p>
                         <p class="text-center">Saturday: 9:00 AM - 12:30 PM</p>
                         <p class="text-center">Sunday: Closed</p>
-                        <p class="text-center">Phone | (613) 555-1234</p>
-                        <p class="text-center">Email | dental@ottawaClinic.ca</p>
+                        <p class="text-center">Phone | + 1 (613) 555-1234</p>
+                        <p class="text-center">Email | <a class="text-decoration-none text-black" href="mailto:dental@ottawaClinic.ca">dental@ottawaClinic.ca</a></p>
                     </div>
                     <div class="col-md-7">
                         <h1 class="text-info mb-4 mt-4">Book an Appointment</h1>
@@ -430,7 +441,8 @@
                                 </p>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <select class="form-select" id="select-3" aria-label="Select a mode of consultation">
+                                        <select class="form-select" id="select-3"
+                                            aria-label="Select a mode of consultation">
                                             <option value="1">In Person</option>
                                             <option value="2">Virtual</option>
                                         </select>
