Modify booking section

--- a/index.html
+++ b/index.html
@@ -446,19 +446,19 @@
                                             <option value="1">In Person</option>
                                             <option value="2">Virtual</option>
                                         </select>
-                                        <label for="select-3">Select a mode of consultation</label>
+                                        <label for="select-3">Select a Mode of Consultation</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <label for="date">Select a date:</label>
+                                        <label for="date">Select a Date:</label>
                                         <input type="date" class="form-control pb-4" id="date" name="date"
                                             style="padding-top: 55px;">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <label for="time">Select a time:</label>
+                                        <label for="time">Select a Time:</label>
                                         <input type="time" class="form-control pb-4" id="time" name="time"
                                             style="padding-top: 55px;">
                                     </div>
