--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             alt="image of a dentist smiling">
                     </div>
                     <div class="col-lg-6">
-                        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
+                        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 welcome">
                             Welcome to Ottawa Dental Clinic
                         </h1>
                         <p class="lead pt-2">
@@ -74,7 +74,7 @@
                                 class="btn btn-info btn-lg px-4 me-md-2 text-white fs-4">Book an
                                 Appointment</a>
                         </div>
-                        <div class="pt-4">
+                        <div class="pt-4 phone_email">
                             <span>
                                 <i class="bi bi-telephone"></i> <span class="phone-link">&nbsp; +1 (613) 555-1234 &nbsp; &nbsp;&nbsp;&nbsp;</span> <i
                                     class="bi bi-envelope"></i> &nbsp;<a class="email-link"
@@ -241,7 +241,7 @@
                             <div class="card-body">
                                 <h5>Routine Cleanings</h5>
                                 <p class="card-text">Providing dental cleanings to maintain oral
-                                    health, prevent cavities, and ensure a bright and healthy smile.</p>
+                                    health, prevent cavities, and ensure a bright smile.</p>
                                 <h5>$1000</h5>
                             </div>
                         </div>
