--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     </div>
                     <div class="col">
                         <div class="card">
-                            <img class="img-fluid" src="./assets/service6.jpg"
+                            <img class="img-fluid" src="./assets/dental-mouthguard.webp"
                                 alt="image showing a tool holding a tooth">
                             <div class="card-body">
                                 <h5>Personalized Mouthguard</h5>
