text card adjusted

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                             <div class="card-body">
                                 <h5>Routine Cleanings</h5>
                                 <p class="card-text">Providing dental cleanings to maintain oral
-                                    health, prevent cavities, and ensure a bright smile.</p>
+                                    health, prevent cavities, and ensure a bright and a healthy smile.</p>
                                 <h5>$1000</h5>
                             </div>
                         </div>
