--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <div class="col">
                         <div class="card">
                             <img class="img-fluid" src="./assets/dental-mouthguard.webp"
-                                alt="image showing a tool holding a tooth">
+                                alt="image showing a doctor adjusting the personalized mouthguard to a patient">
                             <div class="card-body">
                                 <h5>Personalized Mouthguard</h5>
                                 <p class="card-text">Crafting high-quality, personalized mouthguards for optimal
