--- a/index.html
+++ b/index.html
@@ -74,12 +74,11 @@
                                 class="btn btn-info btn-lg px-4 me-md-2 text-white fs-4">Book an
                                 Appointment</a>
                         </div>
-                        <div class="pt-4 phone_email">
-                            <span>
-                                <i class="bi bi-telephone"></i> <span class="phone-link">&nbsp; +1 (613) 555-1234 &nbsp; &nbsp;&nbsp;&nbsp;</span> <i
-                                    class="bi bi-envelope"></i> &nbsp;<a class="email-link"
-                                    href="mailto:dental@ottawaClinic.ca">dental@ottawaClinic.ca</a>
-                            </span>
+                        <div class="pt-4 phone_email d-flex">
+                            <p class="pe-3"><i class="bi bi-telephone"></i> <span class="phone-link">&nbsp; +1 (613)
+                                    555-1234</p>
+                            <p><i class="bi bi-envelope"></i> &nbsp;<a class="email-link"
+                                    href="mailto:dental@ottawaClinic.ca">dental@ottawaClinic.ca</a></p>
                         </div>
                     </div>
                 </div>
@@ -227,7 +226,7 @@
                             <div class="card-body">
                                 <h5>Personalized Mouthguard</h5>
                                 <p class="card-text">Crafting high-quality, personalized mouthguards for optimal
-                                    fit, comfort, and protection for every
+                                    fit, comfort and protection for every
                                     individual.</p>
                                 <h5>$1200</h5>
                             </div>
@@ -241,7 +240,7 @@
                             <div class="card-body">
                                 <h5>Routine Cleanings</h5>
                                 <p class="card-text">Providing dental cleanings to maintain oral
-                                    health, prevent cavities, and ensure a bright and a healthy smile.</p>
+                                    health, prevent cavities, and ensure a bright smile.</p>
                                 <h5>$1000</h5>
                             </div>
                         </div>
@@ -263,7 +262,7 @@
                             alt="image showing Dr James Rodriguez">
                     </div>
                     <div class="col-sm-8 col-xl-9 d-flex flex-column justify-content-center">
-                        <div style="margin-left: 40px;">
+                        <div class="ms-md-5">
                             <h4>Dr James Rodriguez</h4>
                             <p class="pt-2">
                                 Dr. James Rodriguez is the founder and CEO of Ottawa Dental Clinic. He is a graduate of
@@ -279,14 +278,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="row g-4 px-5 py-4">
+                <div class="row g-4 px-3 py-4">
                     <div class="col-sm-8 col-xl-9 d-flex flex-column justify-content-center">
-                        <div style="margin-right:50px;">
+                        <div class="me-md-5">
                             <h4>Dr Bradley Williams</h4>
                             <p class="pt-2">
                                 Dr. Bradley Williams, a graduate from McGill University, brings over 5 years of
-                                experience
-                                to
+                                experience to
                                 our team, specializing in advanced dental procedures and oral surgery. With a passion
                                 for
                                 patient care and a commitment to excellence, Dr. Williams ensures each patient receives
@@ -301,13 +299,13 @@
                             alt="image showing Dr Bradley Williams">
                     </div>
                 </div>
-                <div class="row g-4 px-5 py-4">
+                <div class="row g-4 px-3 py-4">
                     <div class="col-sm-4 col-xl-3">
                         <img class="img-fluid rounded-circle" src="./assets/dentist2.jpg"
                             alt="Image showing Dr Natalie Smith">
                     </div>
                     <div class="col-sm-8 col-xl-9 d-flex flex-column justify-content-center">
-                        <div style="margin-left: 50px;">
+                        <div class="ms-md-5">
                             <h4>Dr Natalie Smith</h4>
                             <p class="pt-2">
                                 Dr. Natalie Smith is a graduate of the University of Ottawa and has been practicing
@@ -321,9 +319,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row g-4 px-5 py-4">
+                <div class="row g-4 px-3 py-4">
                     <div class="col-sm-8 col-xl-9 d-flex flex-column justify-content-center">
-                        <div style="margin-right: 50px;">
+                        <div class="me-md-5">
                             <h4>Chloe Johnson</h4>
                             <p class="pt-2">
                                 Chloe Johnson is a nurse that works at the dental care clinic and assists the dentists
@@ -368,7 +366,8 @@
                         <p class="text-center">Saturday: 9:00 AM - 12:30 PM</p>
                         <p class="text-center">Sunday: Closed</p>
                         <p class="text-center">Phone | + 1 (613) 555-1234</p>
-                        <p class="text-center">Email | <a class="text-decoration-none text-black" href="mailto:dental@ottawaClinic.ca">dental@ottawaClinic.ca</a></p>
+                        <p class="text-center">Email | <a class="text-decoration-none text-black"
+                                href="mailto:dental@ottawaClinic.ca">dental@ottawaClinic.ca</a></p>
                     </div>
                     <div class="col-md-7">
                         <h1 class="text-info mb-4 mt-4">Book an Appointment</h1>
