card text height

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                                 alt="image showing a woman smiling with a set of different tooth colors">
                             <div class="card-body">
                                 <h5>Teeth Whitening</h5>
-                                <p class="card-text">Offering a safe, effective, and personalized treatment to brighten
-                                    your smile and enhance your natural teeth.</p>
+                                <p class="card-text">Offering a safe, effective, and personalized treatment to brighten and enhance 
+                                    your smile.</p>
                                 <h5>$1500</h5>
                             </div>
                         </div>
@@ -263,7 +263,7 @@
                     </div>
                     <div class="col-sm-8 col-xl-9 d-flex flex-column justify-content-center">
                         <div class="ms-md-5">
-                            <h4>Dr James Rodriguez</h4>
+                            <h4>Dr. James Rodriguez</h4>
                             <p class="pt-2">
                                 Dr. James Rodriguez is the founder and CEO of Ottawa Dental Clinic. He is a graduate of
                                 the
@@ -281,7 +281,7 @@
                 <div class="row g-4 px-3 py-4">
                     <div class="col-sm-8 col-xl-9 d-flex flex-column justify-content-center">
                         <div class="me-md-5">
-                            <h4>Dr Bradley Williams</h4>
+                            <h4>Dr. Bradley Williams</h4>
                             <p class="pt-2">
                                 Dr. Bradley Williams, a graduate from McGill University, brings over 5 years of
                                 experience to
@@ -306,7 +306,7 @@
                     </div>
                     <div class="col-sm-8 col-xl-9 d-flex flex-column justify-content-center">
                         <div class="ms-md-5">
-                            <h4>Dr Natalie Smith</h4>
+                            <h4>Dr. Natalie Smith</h4>
                             <p class="pt-2">
                                 Dr. Natalie Smith is a graduate of the University of Ottawa and has been practicing
                                 dentistry
@@ -353,7 +353,7 @@
                 <div class="row g-5 px-3 pb-3">
                     <div class="col-md-5">
                         <h2 class="text-info">Ottawa Dental Clinic</h2>
-                        <h5 class="py-3 fs-6">Location: 150 Louis Pasteur Private, Ottawa, ON K1N 1A2, Canada</h5>
+                        <h5 class="py-3 fs-6">Location: 150 Louis Pasteur Private, Ottawa, ON, K1N 1A2, Canada</h5>
                         <div class="map-responsive mt-3 mb-1">
                             <iframe id="map" class="col-md-12"
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2886.451558405615!2d-75.68254308447863!3d45.420066879100094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce05a77b5e6c27%3A0x36e89c445bb0a60a!2s150%20Louis-Pasteur%20Private%2C%20Ottawa%2C%20ON%20K1N%201A2%2C%20Canada!5e0!3m2!1sen!2sus!4v1685382636092!5m2!1sen!2sus"
