adjust booking section

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                             comfortable
                             and friendly environment.
                         </p>
-                        <div class="d-grid gap-2 d-md-flex justify-content-md-start pt-2">
+                        <div class="d-grid gap-2 d-md-flex pt-2 justify-content-start" id="AppointmentBtn">
                             <a href="#booking" type="button"
-                                class="btn btn-info btn-lg px-4 me-md-2 text-white fs-4">Book an
+                                class="btn btn-info btn-md px-4 me--2 text-white fs-4">Book an
                                 Appointment</a>
                         </div>
                         <div class="pt-4 phone_email d-flex">
@@ -351,7 +351,7 @@
         <div id="booking">
             <div class="container-fluid bg-info-subtle col-lg-12 pt-5 px-5">
                 <div class="row g-5 px-3 pb-3">
-                    <div class="col-md-5">
+                    <div class="col-lg-5 col-md-12">
                         <h2 class="text-info">Ottawa Dental Clinic</h2>
                         <h5 class="py-3 fs-6">Location: 150 Louis Pasteur Private, Ottawa, ON, K1N 1A2, Canada</h5>
                         <div class="map-responsive mt-3 mb-1">
@@ -369,7 +369,7 @@
                         <p class="text-center">Email | <a class="text-decoration-none text-black"
                                 href="mailto:dental@ottawaClinic.ca">dental@ottawaClinic.ca</a></p>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-lg-7 col-md-12">
                         <h1 class="text-info mb-4 mt-4">Book an Appointment</h1>
                         <form>
                             <div class="row g-4">
