--- a/index.html
+++ b/index.html
@@ -376,14 +376,14 @@
                                 <div class="col-md-6">
                                     <div class="form-floating">
                                         <input type="text" class="form-control" id="fname"
-                                            placeholder="Enter your First Name">
+                                            placeholder="Enter your First Name" required>
                                         <label for="fname">Enter your First Name</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
                                         <input type="text" class="form-control" id="lname"
-                                            placeholder="Enter your Last Name">
+                                            placeholder="Enter your Last Name" required>
                                         <label for="lname">Enter your Last Name</label>
                                     </div>
                                 </div>
@@ -396,7 +396,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                        <input type="email" class="form-control" id="email" placeholder="Your Email" required>
                                         <label for="email">Enter your Email</label>
                                     </div>
                                 </div>
